@@ -1,3 +1,5 @@
+GERMAN VERSION: <br /> <br />
+
 unRAID Universal Custom Theme v0.6 <br />
 Created by: Sakashi<br /><br />
 
@@ -16,7 +18,6 @@ Im unRAID-Terminal dieses Script ausführen und den Anweisungen befolgen: <br />
 
 Befolgt ihr die Anweisungen sollte alles klappen ohne es genauer zu erklären. <br />
 
-Alternativ kannst du die Code Zeile auch in User.Scripts einfügen und so auch ausführen, zum abbrechen des Scripts ist oben rechts dann ein Rotes Kreuz. <br />
 <br />Folgende Vorraussetzung braucht ihr:<br />
 User.Script - muss installiert sein<br />
 Theme Engine - muss installiert sein<br />
@@ -27,3 +28,35 @@ Ein paar Bilder für den ersteindruck findet ihr hier: https://github.com/Sakash
 Credits gehen an: <br />
 Theme.Park - https://github.com/GilbN/theme.park <br />
 almulder - unRAID Forum für sein sh Script das ich als Grundlage nehme. <br />
+
+
+ENGLISH VERSION: <br /> <br />
+
+unRAID Universal Custom Theme v0.6 <br />
+Created by: Sakashi<br /><br />
+
+Features: <br />
+- Easy to Use - you don't need any html, css or other knowledge  <br />
+- Easy to understand wizard <br />
+- Auto backup and restore of user input during updates <br />
+- Uninstall function to undo everything <br />
+
+Instructions:<br />
+
+Run this script in the unRAID terminal and follow the instructions: <br />
+
+" bash <(curl -s https://raw.githubusercontent.com/Sakashi92/unraid-universal-custom-theme/dev/web_installer.sh) " <br />
+						Leave the "" out when copying.<br />
+
+If you follow the instructions, everything should work without explaining it in more detail. <br />
+
+<br />You need the following prerequisite:<br />
+User.Script - must be installed<br />
+Theme Engine - must be installed<br />
+
+If you don't have it, please install it first before running the script above. <br />
+
+A few pictures for the first impression can be found here: https://github.com/Sakashi92/unraid-universal-custom-theme/tree/dev/screenshots <br /><br /><br />
+Credits: <br />
+Theme.Park - https://github.com/GilbN/theme.park <br />
+almulder - unRAID forum for his sh script which I take as a basis. <br />
